--- a/src/MyTemplate.UI/MyTemplate.UI.csproj
+++ b/src/MyTemplate.UI/MyTemplate.UI.csproj
@@ -23,6 +23,9 @@
 
     <PropertyGroup>
         <MinVerDefaultPreReleaseIdentifiers>preview</MinVerDefaultPreReleaseIdentifiers>
+        <RootNamespace>MyTemplate.UI</RootNamespace>
+        <AssemblyName>MyTemplate.UI</AssemblyName>
+        <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
 </Project>
